Fix branch naming
[skip ci]

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -32,7 +32,7 @@ stages:
 
         - task: PublishBuildArtifacts@1
           displayName: "Publishing UI"
-          condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'develop'))
+          condition: and(succeeded(), eq(variables['Build.SourceBranchName'], 'develop'))
           inputs:
             PathtoPublish: 'drop'
             publishLocation: Container
