--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -34,6 +34,6 @@ stages:
           displayName: "Publishing UI"
           condition: and(succeeded(), eq(variables['Build.SourceBranchName'], 'develop'))
           inputs:
-            PathtoPublish: 'drop'
+            PathtoPublish: $(Build.ArtifactStagingDirectory)
             publishLocation: Container
             ArtifactName: 'UI'
