Update azure-pipeline.yml for Azure Pipelines

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -27,7 +27,7 @@ stages:
         - script: |
             npm install -g @angular/cli
             npm install
-            ng build --prod -op $(Build.ArtifactStagingDirectory)
+            ng build --output-path=/$(Build.ArtifactStagingDirectory)
           displayName: 'npm install and build'
 
         - task: PublishBuildArtifacts@1
